Working history as well as timer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,15 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".TimerActivity"
+            android:label="Timer"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+
+        <activity android:name=".TimerHistoryActivity"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
