Working history as well as timer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity android:name=".TimerHistoryActivity"
             android:exported="true"/>
 
+        <activity android:name=".SoundSettingsActivity"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
