Working history as well as timer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
             android:exported="true"/>
 
         <activity android:name=".SoundSettingsActivity"
+            android:label="Notification Sound Settings"
             android:exported="true"/>
 
     </application>
